# ros-gazebo-gym-examples

./: .gitignore  .release-please-manifest.json  .versionrc  CHANGELOG.md  CMakeLists.txt  README.md  contributing.md  package-lock.json  package.json  package.xml  pnpm-lock.yaml  setup.cfg
.github/: dependabot.yml
.github/workflows/: release_ci.yml  release_please.yml  ros-gazebo-gym-examples.yml  ros-gazebo-gym.yml  ros_test.yml
config/: ros_gazebo_gym_panda_example_params.yaml
launch/: load_panda_example_training_params.launch.xml  start_panda_training.launch
requirements/: requirements.txt
ros_gazebo_gym_panda_example/: CMakeLists.txt  package.xml  requirements.txt
ros_gazebo_gym_panda_example/config/: ros_gazebo_gym_panda_example_params.yaml
ros_gazebo_gym_panda_example/launch/: load_panda_openai_params.launch.xml  start_training.launch
ros_gazebo_gym_panda_example/scripts/: start_sac_baselines.py
rosdep/: README.md
scripts/: start_panda_training_sac_example.py
