<?xml version="1.0"?>
<package format="2">
  <name>ros_gazebo_gym_examples</name>
  <version>1.1.7</version>
  <description>Several usage examples for gymnasium environments found in the ros-gazebo-gym package.</description>
  <maintainer email="rick.staa@outlook.com">rickstaa</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ros_gazebo_gym</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>ros_gazebo_gym</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>franka_gazebo</exec_depend>

  <!-- Python dependencies -->
  <exec_depend>gymnasium-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-stable-baselines3-pip</exec_depend>
</package>
